Change Log
==========


Release 0.5.5.17
	- feature request ID: 
	  add userid to groupadmin search
	  
	- Feature request ID:
	  show only groups an user may work with in search results
	 
	- write permission violations to log
	
	- added search to repository access rights (Repository, path)
	 
Release 0.5.5.16
	- Feature request ID: 3582680
	  allow every user a "show my permissions" report
	  added a permission overview to the general view
	  
	- Fixed an issue with administration rights
	
Release 0.5.5.15
	- improved documentation
	
	- documentation is now available as link
	
	
Release 0.5.5.14
	- added some help texts
	
	- Fixed Bug ID: 3580163
	  Missing results in user report
	  
	  
Release 0.5.5.13
	- redesigned help system, added help texts
	
	- jump back to repository list if repo is created or 
	  modified successfully
	
	- create an error message if ldap is not reachable and 
	  do not loop in login
	  
	- small selinux documentation in the README file
	
	- Feature request ID: 3579139
	  additional search fields
	  
	- bulk add functionality for LDAP users
	
	
Release 0.5.5.12
	- Bug fix in rep_show_group.php
	
	- removed old, unneeded files and folders
	
	- changed session handling to be compatible with PHP 5.4
	  
	- renamed hex2bin function to myhex2bin to avoid conflicts 
	  with PHP 5.4
	  
	- Bug Fix in db-functions-adodb.inc.php
	
	- some typos corrected in German language file
	
	- added tool tips
	
	- Fixed Bug ID: 3577838
	  installer doesn't set new ldap options
	  
	  
Release 0.5.5.11
	- Feature request ID: 3576275
	  Encoding LDAP name and given name to handle German umlauts
	  
	- Feature request ID: 3576273
	  Sorting LDAP Users
	  
	- Feature request ID: 3576346
	  Writing root access rights
	  
	- Feature request ID: 3576692
	  Report "show group"
	  
	- Bug Fix in LDAP connect, wrong protocol version was used
	
	- Bug Fix in user and group report
	  output error message if no user or no group are selected
	  